Fix NavBar component and button text contrast

--- a/frontend/src/components/NavBar/styles.scss
+++ b/frontend/src/components/NavBar/styles.scss
@@ -1,4 +1,16 @@
-.Nav-bar-container {
+@import "../../scss/theme.scss";
+@import url("https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300;400;500;600;700&display=swap");
+
+.Navbar-container {
   padding-left: 2em;
   padding-right: 2em;
+}
+
+.Navbar-peerprep {
+  font-family: $font-overpass-mono;
+}
+
+#Navbar-dropdown-text {
+  color: white;
+  font-weight: bold;
 }
